# keryx

./: .clang-format  .gitignore  CMakeDeps.cmake  CMakeLists.txt  README.md  a  compile_commands.json  meson.build  tutorial.cpp
MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cpp
doc/: design.org  notes.org
src/: main.cpp  sketch.cpp
src/benchmarks/: alloc_bm.cpp
src/lib/: f.cpp  f.h  sketch.cpp
src/lib/broker/: Broker.cpp  Broker.h  Broker2.h  Broker3.h  Consumer.cpp  Consumer.h  ConsumerImpl.h  IProducerTypeDescriptor.h  OldBroker.cpp  OldBroker.h  Producer.cpp  Producer.h  ProducerImpl.cpp  ProducerImpl.h  ProducerType.h  ProducerTypeDescriptor.h  ProducerTypeRegistry.h  QueuedBroker.cpp  QueuedBroker.h  SnapshotHandler.cpp  SnapshotHandler.h  StreamDescriptor.h  StreamDescriptorRegistry.h  Topic.h  TopicImpl.h  broker_common.h
src/lib/ring_buffer/: ring_buffer.h
src/lib/router/: #Broker.cpp#  Broker.cpp  Broker.h  Node.cpp  Node.h
src/lib/simple/: simple.cpp
src/lib/utils/: allocators.h  keryx_assert.h  mp_utils.h
tools/: setup_builds.sh  vs_filters.cmake
tools/docker/: Dockerfile  build.sh  run.sh
